@@ -66,7 +66,7 @@ const CString CPWToolBar::m_csMainButtons[] = {
   // Optional (non-default) buttons next
   _T("exporttext"), _T("exportxml"), _T("importtext"), _T("importxml"), 
   _T("saveas"), _T("compare"), _T("merge"), _T("listtree"), _T("find"), _T("viewreports"), 
-  _T("applyfilters"), _T("setfilters"), _T("managefilters")
+  _T("applyfilters"), _T("setfilters"), _T("managefilters"), _T("passwordsubset")
 };
 
 const UINT CPWToolBar::m_MainToolBarIDs[] = {
@@ -108,7 +108,8 @@ const UINT CPWToolBar::m_MainToolBarIDs[] = {
   ID_TOOLBUTTON_VIEWREPORTS,
   ID_MENUITEM_APPLYFILTER,
   ID_MENUITEM_EDITFILTER,
-  ID_MENUITEM_MANAGEFILTERS
+  ID_MENUITEM_MANAGEFILTERS,
+  ID_MENUITEM_PASSWORDSUBSET
 };
 
 // Additional Control IDs not on ToolBar
@@ -174,7 +175,8 @@ const UINT CPWToolBar::m_MainToolBarClassicBMs[] = {
   IDB_VIEWREPORTS_CLASSIC,
   IDB_APPLYFILTERS_CLASSIC,
   IDB_SETFILTERS_CLASSIC,
-  IDB_MANAGEFILTERS_CLASSIC
+  IDB_MANAGEFILTERS_CLASSIC,
+  IDB_PASSWORDCHARS_CLASSIC
 };
 
 // Additional bitmaps not on ToolBar
@@ -240,7 +242,8 @@ const UINT CPWToolBar::m_MainToolBarNewBMs[] = {
   IDB_VIEWREPORTS_NEW,
   IDB_APPLYFILTERS_NEW,
   IDB_SETFILTERS_NEW,
-  IDB_MANAGEFILTERS_NEW
+  IDB_MANAGEFILTERS_NEW,
+  IDB_PASSWORDCHARS_NEW
 };
 
 const UINT CPWToolBar::m_MainToolBarNewDisBMs[] = {
@@ -275,7 +278,8 @@ const UINT CPWToolBar::m_MainToolBarNewDisBMs[] = {
   IDB_VIEWREPORTS_NEW_D,
   IDB_APPLYFILTERS_NEW_D,
   IDB_SETFILTERS_NEW_D,
-  IDB_MANAGEFILTERS_NEW_D
+  IDB_MANAGEFILTERS_NEW_D,
+  IDB_PASSWORDCHARS_NEW_D
 };
 
 // Additional bitmaps not on ToolBar
