@@ -438,6 +438,14 @@ BEGIN
         TOPMARGIN, 7
         BOTTOMMARGIN, 165
     END
+
+    IDD_PASSWORDSUBSET, DIALOG
+    BEGIN
+        LEFTMARGIN, 7
+        RIGHTMARGIN, 195
+        TOPMARGIN, 7
+        BOTTOMMARGIN, 62
+    END
 END
 #endif    // APSTUDIO_INVOKED
 
@@ -607,6 +615,9 @@ IDB_SETFILTERS_NEW_D    BITMAP                  "res\\toolbar\\setfilter_new_dis
 IDB_MANAGEFILTERS_CLASSIC BITMAP                  "res\\toolbar\\managefilters_classic.bmp"
 IDB_MANAGEFILTERS_NEW   BITMAP                  "res\\toolbar\\managefilters_new.bmp"
 IDB_MANAGEFILTERS_NEW_D BITMAP                  "res\\toolbar\\managefilters_new_disabled.bmp"
+IDB_PASSWORDCHARS_CLASSIC BITMAP                  "res\\toolbar\\passwordchars_classic.bmp"
+IDB_PASSWORDCHARS_NEW   BITMAP                  "res\\toolbar\\passwordchars_new.bmp"
+IDB_PASSWORDCHARS_NEW_D BITMAP                  "res\\toolbar\\passwordchars_new_disabled.bmp"
 IDB_FINDADVANCED_CLASSIC BITMAP                  "res\\toolbar\\findadvanced_classic.bmp"
 IDB_FINDADVANCED_NEW    BITMAP                  "res\\toolbar\\findadvanced_new.bmp"
 IDB_FINDCASE_I_CLASSIC  BITMAP                  "res\\toolbar\\findcase_i_classic.bmp"
@@ -1582,6 +1593,18 @@ BEGIN
     DEFPUSHBUTTON   "&Finish",IDCANCEL,229,151,70,14
     EDITTEXT        IDC_EDITREPORT,6,5,343,132,ES_MULTILINE | ES_PASSWORD | ES_READONLY | WS_VSCROLL | WS_HSCROLL
     PUSHBUTTON      "Copy to Clipboard",IDC_REPORT2CLIPBOARD,143,151,70,14
+END
+
+IDD_PASSWORDSUBSET DIALOGEX 0, 0, 202, 69
+STYLE DS_SETFONT | DS_MODALFRAME | DS_CENTER | WS_POPUP | WS_CAPTION | WS_SYSMENU
+CAPTION "Show a subset of the Password"
+FONT 8, "MS Sans Serif", 0, 0, 0x0
+BEGIN
+    EDITTEXT        IDC_SUBSET,9,21,182,12,ES_MULTILINE | ES_AUTOHSCROLL | ES_WANTRETURN
+    LTEXT           "Enter positions of password characters separated by spaces, commas or semi-colons:",IDC_STATIC,3,1,192,16
+    LTEXT           "Requested Values:",IDC_STATIC,3,53,61,8
+    LTEXT           "",IDC_STATICSUBSETWARNING,9,36,182,10,SS_CENTERIMAGE
+    EDITTEXT        IDC_SUBSETRESULTS,65,50,125,14,ES_AUTOHSCROLL | ES_READONLY | NOT WS_TABSTOP
 END
 
 
