@@ -154,7 +154,7 @@ BEGIN
   IDS_DEFDBNAME           "pwsafe"
   IDS_U3PURCHASE          "Purchase unlimited &U3 version..."
   IDS_OVERRIDE_POLICY     "Shift+click to view current policy"
-  IDC_CLICKTOCOPY         "Click to copy to clipboard"
+  IDS_CLICKTOCOPY         "Click to copy to clipboard"
 END
 
 STRINGTABLE
@@ -647,4 +647,9 @@ BEGIN
   IDS_FILTERCOPY2DB         "Copy to DB"
   IDS_FILTEREXPORT          "Export"
   IDS_FILTERAPPLY           "Apply"
+END
+
+STRINGTABLE
+BEGIN
+  IDS_TOOBIGSUBSETINDEX     "Index is zero or bigger than password length (%d)."
 END
